# online_plotter

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  index.html  pwa.webmanifest
docs/: index-2c3a5dc3fd94c21f_bg.wasm  index-3e14cea8a66b24da.js  index-482992d9de7bc3e8.js  index-70566596e3fcf9d4.js  index-ce2b95cbe385d9fe.js  index-df179806298ad289.js  index-e0537d81cb66b4d0.js  index-e0537d81cb66b4d0_bg.wasm  index.html
docs/simple/: index-d3bd2e5361c07f09.js  index.html
examples/simple/: README.md
examples/simple/src/: input.rs  main.rs
src/: input.rs  main.rs
src/input/: fn_input.rs
