[package]
name = "online-plotter"
version = "0.1.0"
authors = ["raimundo saona <rasa200@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.51", features = ["HtmlCanvasElement"] }
plotters-canvas = "0.3.0"
plotters = "0.3.1"
wasm-logger = "0.2.0"
log = "0.4.14"
itertools-num = "0.1.3"
itertools = "0.10.1"
exmex = "0.6.0"
serde = "1.0.126"
ron = "0.6.4"
splines = "4.0.3"
anyhow = "1.0.42"
thiserror = "1.0.26"
